--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -20,10 +20,6 @@
             <Setter Property="FontSize" Value="14" />
         </Style>
 
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="14" />
-        </Style>
-
         <cvt:MessageTagBgConverter x:Key="MessageTagBgConverterKey" />
         <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
         <cvt:ListenStateConverter x:Key="ListenStateConverterKey" />
@@ -58,9 +54,10 @@
                     VerticalAlignment="Center"
                     Text="本机地址" />
 
-                <hc:ComboBox
+                <ComboBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
+                    FontSize="14"
                     IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     ItemsSource="{Binding LocalAddressCollection}"
                     SelectedIndex="{Binding ComboBoxSelectedIndex}" />
@@ -85,6 +82,7 @@
                     Margin="10,0"
                     hc:InfoElement.Placeholder="端口"
                     hc:InfoElement.ShowClearButton="True"
+                    FontSize="14"
                     IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     MaxLength="4"
                     Text="{Binding ListenPort}"
@@ -121,6 +119,7 @@
                     Margin="10,0,0,0"
                     hc:InfoElement.Placeholder="非必填"
                     hc:InfoElement.ShowClearButton="True"
+                    FontSize="14"
                     IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
                     Text="{Binding RequestPath}"
                     TextWrapping="NoWrap" />
@@ -141,6 +140,7 @@
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     hc:InfoElement.Placeholder="开启监听后自动生成"
+                    FontSize="14"
                     IsReadOnly="True"
                     Text="{Binding WebSocketUrl}"
                     TextWrapping="NoWrap" />
@@ -344,6 +344,7 @@
                 <hc:TextBox
                     Grid.Column="1"
                     Margin="10,0"
+                    FontSize="14"
                     IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
                     MaxLength="5"
                     Text="{Binding CommandInterval}" />
@@ -364,6 +365,7 @@
                     Grid.Column="0"
                     Padding="4"
                     VerticalContentAlignment="Top"
+                    FontSize="14"
                     Text="{Binding UserInputText}"
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto" />
