--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -20,10 +20,6 @@
             <Setter Property="FontSize" Value="14" />
         </Style>
 
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="14" />
-        </Style>
-
         <cvt:MessageTagBgConverter x:Key="MessageTagBgConverterKey" />
         <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
         <cvt:DeleteExCmdBtnVisibleConverter x:Key="DeleteExCmdBtnVisibleConverterKey" />
@@ -56,6 +52,7 @@
                 Margin="10,0"
                 hc:InfoElement.Placeholder="远程TCP Server IP"
                 hc:InfoElement.ShowClearButton="True"
+                FontSize="14"
                 Text="{Binding RemoteAddress}"
                 TextWrapping="NoWrap" />
 
@@ -64,6 +61,7 @@
                 MinWidth="90"
                 hc:InfoElement.Placeholder="端口"
                 hc:InfoElement.ShowClearButton="True"
+                FontSize="14"
                 MaxLength="4"
                 Text="{Binding RemotePort}"
                 TextWrapping="NoWrap" />
@@ -183,6 +181,7 @@
                 x:Name="ExCommandComboBox"
                 Grid.Column="0"
                 HorizontalContentAlignment="Stretch"
+                FontSize="14"
                 ItemsSource="{Binding ExCommandCollection}"
                 SelectedIndex="0">
                 <ComboBox.ItemTemplate>
@@ -250,6 +249,7 @@
                 MinWidth="100"
                 Margin="10,0"
                 hc:InfoElement.ShowClearButton="True"
+                FontSize="14"
                 IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
                 MaxLength="5"
                 Text="{Binding CommandInterval}" />
@@ -277,6 +277,7 @@
                 Grid.Column="0"
                 Padding="4"
                 VerticalContentAlignment="Top"
+                FontSize="14"
                 Text="{Binding UserInputText}"
                 TextWrapping="Wrap"
                 VerticalScrollBarVisibility="Auto" />
