--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -20,10 +20,6 @@
             <Setter Property="FontSize" Value="14" />
         </Style>
 
-        <Style TargetType="TextBox">
-            <Setter Property="FontSize" Value="14" />
-        </Style>
-
         <cvt:MessageTagBgConverter x:Key="MessageTagBgConverterKey" />
         <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
         <cvt:DeleteExCmdBtnVisibleConverter x:Key="DeleteExCmdBtnVisibleConverterKey" />
@@ -55,6 +51,7 @@
                 Margin="10,0"
                 hc:InfoElement.Placeholder="远程UDP Server IP"
                 hc:InfoElement.ShowClearButton="True"
+                FontSize="14"
                 Text="{Binding RemoteAddress}"
                 TextWrapping="NoWrap" />
 
@@ -63,6 +60,7 @@
                 MinWidth="90"
                 hc:InfoElement.Placeholder="端口"
                 hc:InfoElement.ShowClearButton="True"
+                FontSize="14"
                 MaxLength="4"
                 Text="{Binding RemotePort}"
                 TextWrapping="NoWrap" />
@@ -175,6 +173,7 @@
                 x:Name="ExCommandComboBox"
                 Grid.Column="0"
                 HorizontalContentAlignment="Stretch"
+                FontSize="14"
                 ItemsSource="{Binding ExCommandCollection}"
                 SelectedIndex="0">
                 <ComboBox.ItemTemplate>
@@ -241,6 +240,7 @@
                 Grid.Column="3"
                 MinWidth="100"
                 Margin="10,0"
+                FontSize="14"
                 IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
                 MaxLength="5"
                 Text="{Binding CommandInterval}" />
@@ -261,6 +261,7 @@
                 Grid.Column="0"
                 Padding="4"
                 VerticalContentAlignment="Top"
+                FontSize="14"
                 Text="{Binding UserInputText}"
                 TextWrapping="Wrap"
                 VerticalScrollBarVisibility="Auto" />
