--- a/DevKit/Views/SerialPortView.xaml
+++ b/DevKit/Views/SerialPortView.xaml
@@ -266,18 +266,9 @@
 
                     <CheckBox
                         Grid.Column="2"
+                        Command="{Binding ShowHexCheckBoxClickCommand}"
                         Content="HEX显示"
-                        IsChecked="{Binding ShowHex}">
-                        <b:Interaction.Triggers>
-                            <b:EventTrigger EventName="Checked">
-                                <b:InvokeCommandAction Command="{Binding ShowHexCheckedCommand}" />
-                            </b:EventTrigger>
-
-                            <b:EventTrigger EventName="Unchecked">
-                                <b:InvokeCommandAction Command="{Binding ShowHexUncheckedCommand}" />
-                            </b:EventTrigger>
-                        </b:Interaction.Triggers>
-                    </CheckBox>
+                        IsChecked="{Binding ShowHex}" />
 
                     <CheckBox
                         x:Name="LoopCheckBox"
