--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -68,18 +68,9 @@
             <CheckBox
                 Grid.Column="3"
                 Margin="10,0,0,0"
+                Command="{Binding ShowHexCheckBoxClickCommand}"
                 Content="HEX显示"
-                IsChecked="{Binding ShowHex}">
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="Checked">
-                        <b:InvokeCommandAction Command="{Binding ShowHexCheckedCommand}" />
-                    </b:EventTrigger>
-
-                    <b:EventTrigger EventName="Unchecked">
-                        <b:InvokeCommandAction Command="{Binding ShowHexUncheckedCommand}" />
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
-            </CheckBox>
+                IsChecked="{Binding ShowHex}" />
         </Grid>
 
         <ListBox
