--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -130,6 +130,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <TextBlock
@@ -145,6 +146,12 @@
                     IsReadOnly="True"
                     Text="{Binding WebSocketUrl}"
                     TextWrapping="NoWrap" />
+
+                <Button
+                    Grid.Column="2"
+                    Margin="10,0,0,0"
+                    Command="{Binding CopyWebSocketUrlCommand}"
+                    Content="复制" />
             </Grid>
 
             <ListBox
