--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -275,8 +275,7 @@
             HorizontalAlignment="Center"
             ItemsSource="{Binding ColorResources}"
             ScrollViewer.CanContentScroll="False"
-            ScrollViewer.VerticalScrollBarVisibility="Hidden"
-            Visibility="{Binding IsTraditionColorListBoxVisible}">
+            ScrollViewer.VerticalScrollBarVisibility="Hidden">
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -301,74 +300,6 @@
                                 Background="Transparent"
                                 BorderThickness="0"
                                 Command="{Binding DataContext.TraditionColorListBoxItemButtonClickCommand, ElementName=TraditionColorListBox}"
-                                CommandParameter="{Binding Hex}"
-                                Content="{Binding Hex}"
-                                FontSize="14"
-                                Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}" />
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-
-            <!--  ListBox横排  -->
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel HorizontalAlignment="Stretch" Orientation="Horizontal" />
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <Border
-                                    x:Name="ItemContainerBorder"
-                                    Width="129"
-                                    Margin="1"
-                                    CornerRadius="5">
-                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListBox.ItemContainerStyle>
-        </ListBox>
-
-        <ListBox
-            x:Name="DimColorListBox"
-            Grid.Row="3"
-            Margin="10"
-            HorizontalAlignment="Stretch"
-            ItemsSource="{Binding ColorResources}"
-            ScrollViewer.CanContentScroll="False"
-            ScrollViewer.VerticalScrollBarVisibility="Hidden"
-            Visibility="{Binding IsDimColorListBoxVisible}">
-
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border Background="{Binding Hex}">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition />
-                                <RowDefinition />
-                                <RowDefinition />
-                            </Grid.RowDefinitions>
-
-                            <TextBlock
-                                Grid.Row="0"
-                                Margin="0,7,0,0"
-                                HorizontalAlignment="Center"
-                                FontSize="14"
-                                Foreground="{Binding Hex, Converter={StaticResource ColorTagForegroundConverterKey}}"
-                                Text="{Binding Name}" />
-
-                            <Button
-                                Grid.Row="1"
-                                Background="Transparent"
-                                BorderThickness="0"
-                                Command="{Binding DataContext.DimColorListBoxItemButtonClickCommand, ElementName=DimColorListBox}"
                                 CommandParameter="{Binding Hex}"
                                 Content="{Binding Hex}"
                                 FontSize="14"
