--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -40,6 +40,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <TextBlock
@@ -78,6 +79,13 @@
                 Command="{Binding ConnectRemoteCommand}"
                 Content="{Binding ButtonState}"
                 Style="{StaticResource ButtonPrimary}" />
+
+            <Ellipse
+                Grid.Column="5"
+                Width="18"
+                Height="18"
+                Margin="10,0,0,0"
+                Fill="{Binding ConnectionStateColor}" />
         </Grid>
 
         <ListBox
@@ -250,12 +258,21 @@
                 VerticalAlignment="Center"
                 Text="ms/次" />
 
-            <Ellipse
+            <CheckBox
                 Grid.Column="5"
-                Width="18"
-                Height="18"
                 Margin="10,0,0,0"
-                Fill="{Binding ConnectionStateColor}" />
+                Content="HEX发送"
+                IsChecked="{Binding SendHex}">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="Checked">
+                        <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
+                    </b:EventTrigger>
+
+                    <b:EventTrigger EventName="Unchecked">
+                        <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </CheckBox>
         </Grid>
 
         <Grid Grid.Row="3">
@@ -277,33 +294,17 @@
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
-                    <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <CheckBox
-                    Grid.Row="0"
-                    Content="HEX"
-                    IsChecked="{Binding SendHex}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="Checked">
-                            <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
-                        </b:EventTrigger>
-
-                        <b:EventTrigger EventName="Unchecked">
-                            <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </CheckBox>
-
                 <Button
-                    Grid.Row="1"
-                    Margin="0,7"
+                    Grid.Row="0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding ClearMessageCommand}"
                     Content="清屏" />
 
                 <Button
-                    Grid.Row="2"
+                    Grid.Row="1"
+                    Margin="0,7,0,0"
                     Background="{DynamicResource BackgroundBrush}"
                     BorderThickness="0"
                     Command="{Binding SendMessageCommand}"
