--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -58,7 +58,7 @@
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     FontSize="14"
-                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     ItemsSource="{Binding LocalAddressCollection}"
                     SelectedIndex="0" />
             </Grid>
@@ -67,7 +67,6 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
@@ -83,24 +82,33 @@
                     hc:InfoElement.Placeholder="端口"
                     hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
-                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     MaxLength="4"
                     Text="{Binding ListenPort}"
                     TextWrapping="NoWrap" />
 
-                <Ellipse
-                    Grid.Column="2"
-                    Width="18"
-                    Height="18"
-                    Margin="0,0,10,0"
-                    Fill="{Binding ListenStateColor}" />
-
                 <Button
-                    x:Name="ListenStateButton"
-                    Grid.Column="3"
+                    Grid.Column="2"
                     Command="{Binding ServerListenCommand}"
-                    Content="{Binding ListenState}"
-                    Style="{StaticResource ButtonPrimary}" />
+                    Style="{StaticResource ButtonPrimary}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+
+                        <Ellipse
+                            Grid.Column="0"
+                            Width="15"
+                            Height="15"
+                            Fill="{Binding ListenStateColor}" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="10,0,0,0"
+                            Text="{Binding ListenState}" />
+                    </Grid>
+                </Button>
             </Grid>
 
             <ListBox
@@ -396,18 +404,19 @@
 
                     <CheckBox
                         Grid.Row="0"
-                        Content="HEX"
+                        Content="HEX发送"
                         IsChecked="{Binding SendHex}" />
 
                     <Button
                         Grid.Row="1"
-                        Margin="0,7"
+                        Margin="0,10"
                         HorizontalAlignment="Stretch"
                         Command="{Binding ClearMessageCommand}"
                         Content="清屏" />
 
                     <Button
                         Grid.Row="2"
+                        HorizontalAlignment="Stretch"
                         Background="{DynamicResource BackgroundBrush}"
                         BorderThickness="0"
                         Command="{Binding SendMessageCommand}"
