--- a/DevKit/Views/UdpServerView.xaml
+++ b/DevKit/Views/UdpServerView.xaml
@@ -57,7 +57,7 @@
                     Grid.Column="1"
                     Margin="10,0,0,0"
                     FontSize="14"
-                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     ItemsSource="{Binding LocalAddressCollection}"
                     SelectedIndex="0" />
             </Grid>
@@ -82,24 +82,33 @@
                     hc:InfoElement.Placeholder="端口"
                     hc:InfoElement.ShowClearButton="True"
                     FontSize="14"
-                    IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
+                    IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     MaxLength="4"
                     Text="{Binding ListenPort}"
                     TextWrapping="NoWrap" />
 
-                <Ellipse
-                    Grid.Column="2"
-                    Width="18"
-                    Height="18"
-                    Margin="0,0,10,0"
-                    Fill="{Binding ListenStateColor}" />
-
                 <Button
-                    x:Name="ListenStateButton"
                     Grid.Column="3"
                     Command="{Binding ServerListenCommand}"
-                    Content="{Binding ListenState}"
-                    Style="{StaticResource ButtonPrimary}" />
+                    Style="{StaticResource ButtonPrimary}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+
+                        <Ellipse
+                            Grid.Column="0"
+                            Width="15"
+                            Height="15"
+                            Fill="{Binding ListenStateColor}" />
+
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="10,0,0,0"
+                            Text="{Binding ListenState}" />
+                    </Grid>
+                </Button>
             </Grid>
 
             <ListBox
