--- a/DevKit/Views/WebSocketClientView.xaml
+++ b/DevKit/Views/WebSocketClientView.xaml
@@ -24,7 +24,7 @@
         <cvt:MessageTypeConverter x:Key="MessageTypeConverterKey" />
     </UserControl.Resources>
 
-    <Grid Margin="10,10,5,10">
+    <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
@@ -57,8 +57,25 @@
             <Button
                 Grid.Column="2"
                 Command="{Binding ConnectRemoteCommand}"
-                Content="{Binding ButtonState}"
-                Style="{StaticResource ButtonPrimary}" />
+                Style="{StaticResource ButtonPrimary}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Ellipse
+                        Grid.Column="0"
+                        Width="15"
+                        Height="15"
+                        Fill="{Binding ConnectionStateColor}" />
+
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="10,0,0,0"
+                        Text="{Binding ButtonState}" />
+                </Grid>
+            </Button>
         </Grid>
 
         <ListBox
@@ -141,78 +158,61 @@
 
         <Grid Grid.Row="2" Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <CheckBox
-                x:Name="LoopCheckBox"
-                Grid.Column="0"
-                Content="循环发送"
-                IsChecked="{Binding LoopSend}">
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="Unchecked">
-                        <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
-            </CheckBox>
+            <Grid Grid.Column="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
 
-            <hc:TextBox
-                Grid.Column="1"
-                MinWidth="100"
-                Margin="10,0"
-                hc:InfoElement.ShowClearButton="True"
-                FontSize="14"
-                IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
-                MaxLength="5"
-                Text="{Binding CommandInterval}" />
+                <CheckBox
+                    x:Name="LoopCheckBox"
+                    Grid.Column="0"
+                    Content="循环发送"
+                    IsChecked="{Binding LoopSend}">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="Unchecked">
+                            <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </CheckBox>
 
-            <TextBlock
-                Grid.Column="2"
-                VerticalAlignment="Center"
-                Text="ms/次" />
+                <hc:TextBox
+                    Grid.Column="1"
+                    MinWidth="100"
+                    Margin="10,0"
+                    hc:InfoElement.ShowClearButton="True"
+                    FontSize="14"
+                    IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
+                    MaxLength="5"
+                    Text="{Binding CommandInterval}" />
 
-            <Ellipse
-                Grid.Column="3"
-                Width="18"
-                Height="18"
-                Margin="10,0,0,0"
-                HorizontalAlignment="Right"
-                Fill="{Binding ConnectionStateColor}" />
-        </Grid>
+                <TextBlock
+                    Grid.Column="2"
+                    VerticalAlignment="Center"
+                    Text="ms/次" />
+            </Grid>
 
-        <Grid Grid.Row="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <hc:TextBox
-                Grid.Column="0"
-                Padding="4"
-                VerticalContentAlignment="Top"
-                FontSize="14"
-                Text="{Binding UserInputText}"
-                TextWrapping="Wrap"
-                VerticalScrollBarVisibility="Auto" />
-
-            <Grid Grid.Column="1" Margin="10,0,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
 
                 <Button
-                    Grid.Row="0"
-                    Margin="0,0,0,7"
+                    Grid.Column="0"
+                    Margin="10,0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding ClearMessageCommand}"
                     Content="清屏" />
 
                 <Button
-                    Grid.Row="1"
+                    Grid.Column="1"
+                    HorizontalAlignment="Stretch"
                     Background="{DynamicResource BackgroundBrush}"
                     BorderThickness="0"
                     Command="{Binding SendMessageCommand}"
@@ -220,5 +220,14 @@
                     Foreground="{DynamicResource SuccessBrush}" />
             </Grid>
         </Grid>
+
+        <hc:TextBox
+            Grid.Row="3"
+            Padding="4"
+            hc:InfoElement.ShowClearButton="True"
+            FontSize="14"
+            Text="{Binding UserInputText}"
+            TextWrapping="Wrap"
+            VerticalScrollBarVisibility="Auto" />
     </Grid>
 </UserControl>
