--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -330,68 +330,60 @@
 
             <Grid Grid.Row="2" Margin="0,0,0,10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <CheckBox
-                    x:Name="LoopCheckBox"
-                    Grid.Column="0"
-                    Content="循环发送"
-                    IsChecked="{Binding LoopSend}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="Unchecked">
-                            <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </CheckBox>
+                <Grid Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
 
-                <hc:TextBox
-                    Grid.Column="1"
-                    Margin="10,0"
-                    FontSize="14"
-                    IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
-                    MaxLength="5"
-                    Text="{Binding CommandInterval}" />
+                    <CheckBox
+                        x:Name="LoopCheckBox"
+                        Grid.Column="0"
+                        Content="循环发送"
+                        IsChecked="{Binding LoopSend}">
+                        <b:Interaction.Triggers>
+                            <b:EventTrigger EventName="Unchecked">
+                                <b:InvokeCommandAction Command="{Binding LoopUncheckedCommand}" />
+                            </b:EventTrigger>
+                        </b:Interaction.Triggers>
+                    </CheckBox>
 
-                <TextBlock
-                    Grid.Column="2"
-                    VerticalAlignment="Center"
-                    Text="ms/次" />
-            </Grid>
+                    <hc:TextBox
+                        Grid.Column="1"
+                        Margin="10,0"
+                        FontSize="14"
+                        IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
+                        MaxLength="5"
+                        Text="{Binding CommandInterval}" />
 
-            <Grid Grid.Row="3">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="ms/次" />
+                </Grid>
 
-                <hc:TextBox
-                    Grid.Column="0"
-                    Padding="4"
-                    VerticalContentAlignment="Top"
-                    FontSize="14"
-                    Text="{Binding UserInputText}"
-                    TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto" />
 
-                <Grid Grid.Column="1" Margin="10,0,0,0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
+                <Grid Grid.Column="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
 
                     <Button
-                        Grid.Row="1"
-                        Margin="0,0,0,7"
+                        Grid.Column="0"
+                        Margin="10,0"
                         HorizontalAlignment="Stretch"
                         Command="{Binding ClearMessageCommand}"
                         Content="清屏" />
 
                     <Button
-                        Grid.Row="2"
+                        Grid.Column="1"
+                        HorizontalAlignment="Stretch"
                         Background="{DynamicResource BackgroundBrush}"
                         BorderThickness="0"
                         Command="{Binding SendMessageCommand}"
@@ -399,6 +391,14 @@
                         Foreground="{DynamicResource SuccessBrush}" />
                 </Grid>
             </Grid>
+
+            <hc:TextBox
+                Grid.Row="3"
+                Padding="4"
+                FontSize="14"
+                Text="{Binding UserInputText}"
+                TextWrapping="Wrap"
+                VerticalScrollBarVisibility="Auto" />
         </Grid>
 
         <Grid
