--- a/DevKit/Views/SerialPortView.xaml
+++ b/DevKit/Views/SerialPortView.xaml
@@ -318,6 +318,7 @@
                         <ColumnDefinition />
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
 
                     <ComboBox
@@ -386,38 +387,25 @@
                             </b:EventTrigger>
                         </b:Interaction.Triggers>
                     </CheckBox>
+
+                    <Button
+                        Grid.Column="3"
+                        Margin="10,0,0,0"
+                        Background="{DynamicResource BackgroundBrush}"
+                        BorderThickness="0"
+                        Command="{Binding SendMessageCommand}"
+                        Content="发送"
+                        Foreground="{DynamicResource SuccessBrush}" />
                 </Grid>
 
-                <Grid Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-
-                    <hc:TextBox
-                        Grid.Column="0"
-                        Padding="6,4"
-                        VerticalContentAlignment="Top"
-                        FontSize="14"
-                        Text="{Binding UserInputText}"
-                        TextWrapping="Wrap"
-                        VerticalScrollBarVisibility="Auto" />
-
-                    <Grid Grid.Column="1" Margin="10,0,0,0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <Button
-                            Grid.Row="1"
-                            Background="{DynamicResource BackgroundBrush}"
-                            BorderThickness="0"
-                            Command="{Binding SendMessageCommand}"
-                            Content="发送"
-                            Foreground="{DynamicResource SuccessBrush}" />
-                    </Grid>
-                </Grid>
+                <hc:TextBox
+                    Grid.Row="2"
+                    Padding="6,4"
+                    VerticalContentAlignment="Top"
+                    FontSize="14"
+                    Text="{Binding UserInputText}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" />
             </Grid>
         </Grid>
     </Grid>
